# TTS-for-silent-player

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  online_tts.rs  remote_tts.rs  settings.rs  tts_bridge.rs  vrchat_osc.rs
