[package]
name = "mugen-tts"
version = "0.0.3"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
