[package]
name = "mugen-tts"
version = "0.0.3"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
httpdate = "1"
raw-window-handle = "0.6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
